--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- SEO / Trust signals -->
-  <title>Kishor Prajapati | Portfolio</title>
-  <meta name="description" content="Portfolio of Kishor Prajapati - React developer specializing in modern web apps, UI animations, and full-stack projects." />
-
-  <!-- Open Graph (for social sharing) -->
-  <meta property="og:title" content="Kishor Prajapati | Portfolio" />
-  <meta property="og:description" content="Explore projects, skills, and contact information." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://kp-profile-01.netlify.app/" />
-  <meta property="og:image" content="/preview.png" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-
-  <!-- Tailwind (better: install via npm instead of CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Kishor Prajapati</title>
 </head>
+
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 </body>
+
 </html>
